--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,152 @@
+
+@use './partials/mixins' as *;
+@use './partials/variables' as *;
 @import "~bootstrap/scss/bootstrap";
+
+.blue-row{
+    background-color: $DcColorBlue;
+    padding: 0.5rem 0;
+    font-size: 0.8rem;
+}
+
+header{
+    @include flex(row,space-between);
+    height: 90px;
+
+
+    .container{
+        max-width: 1000px;
+    }
+    
+    .brand{
+    
+        img{
+            height: 60px
+        }
+    }
+        
+    
+    ul{
+        height: 100%;
+        li{
+            @include flex();
+            margin-right: 1.5rem;
+            font-size: 0.65rem;
+            font-weight: 600;
+            height: 100%;
+    
+            &:hover{
+                text-decoration: underline;
+            }
+            a{
+                text-decoration: none;
+                color: $DcNavColor;
+            }
+        }
+        li:nth-child(2){
+                color: $DcColorBlue;
+            }
+            .active{
+                border-bottom: 4px solid $DcColorBlue ;
+            }
+    }
+
+    .search-bar{
+        border-bottom: 2px solid $DcColorBlue;
+        width: 100%;
+        font-size: 0.8rem;
+        color: $DcNavColor;
+        font-weight: 600;
+    }
+}
+
+.jumbo{
+    background-image: url(../img/jumbotron.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 350px;
+}
+
+.content{
+    color: white;
+    background-color: #1c1c1c;
+    padding: 2rem;
+
+    h1{
+        font-size: 2rem;
+    }
+    .title-content{
+        max-width: 1000px;
+    }
+
+    .list-comic{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    button{
+        margin: auto;
+        padding: 0.9rem 3rem;
+        background-color: $DcColorBlue;
+        color: white;
+        border: none;
+        font-family: 'PT Sans Caption', sans-serif;
+        font-weight: bolder;
+    }
+    .current-series{
+        position: relative;
+        bottom: 45px;
+        font-size: 1.1rem;
+    }
+
+    div.container-card{
+    
+        margin-bottom: 4rem;
+        width: calc(100% / 6 );
+    
+        img{
+                height: 200px;
+                width: 180px;
+            }
+    }
+    p{    
+            margin-top: 0.8rem;
+            margin-right: 1.5rem;
+            font-size: 0.85rem;
+            width: 160px;
+    
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+}
+
+div.content-container{
+    color: white;
+    background-color: $DcColorBlue;
+    padding: 1rem 0;
+    .list-content{
+        max-width: 1000px;
+        display: flex;
+        padding: 0 2rem;
+
+        li{
+            display: flex;
+            width: calc(100% / 5);
+            align-items: center;
+
+            img{
+                margin-right: 1rem;
+                height: 35%;
+            }
+            a{
+                color: white;
+                font-size: 0.65rem;
+                text-decoration: none;
+            }
+            .power-visa{
+                height: 25%;
+
+            }
+        }
+    }
+}
